--- a/.github/workflows/maven-workflow-run.yml
+++ b/.github/workflows/maven-workflow-run.yml
@@ -1,122 +1,38 @@
-# This job is to test different maven profiles in sdk branch against full commit-id provided
-# This workflow targets Java with Maven execution
-
-name: Java SDK Test workflow for Maven on workflow_dispatch
-
-on:
-  workflow_dispatch:
-    inputs:
-      commit_sha:
-        description: 'The full commit id to build'
-        required: true
-
+name: 'BrowserStack Test'
+on: [push, pull_request]
 jobs:
-  comment-run:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      max-parallel: 3
-      matrix:
-        java: [ '8', '11', '17' ]
-        os: [ 'macos-latest', 'windows-latest', 'ubuntu-latest' ]
-    name: TestNG Appium Repo ${{ matrix.Java }} - ${{ matrix.os }} Sample
-    env:
-      BROWSERSTACK_USERNAME: ${{ secrets.BROWSERSTACK_USERNAME }}
-      BROWSERSTACK_ACCESS_KEY: ${{ secrets.BROWSERSTACK_ACCESS_KEY }}
-
+  ubuntu-job:
+    name: 'BrowserStack Test on Ubuntu'
+    runs-on: ubuntu-latest  # Can be self-hosted runner also
     steps:
-      - uses: actions/checkout@v3
+
+      - name: 'BrowserStack Env Setup'  # Invokes the stup-env action
+        uses: browserstack/github-actions/setup-env@master
         with:
-          ref: ${{ github.event.inputs.commit_sha }}
-      - uses: actions/github-script@98814c53be79b1d30f795b907e553d8679345975
-        id: status-check-in-progress
-        env:
-          job_name: TestNG Appium Repo ${{ matrix.Java }} - ${{ matrix.os }} Sample
-          commit_sha: ${{ github.event.inputs.commit_sha }}
+          username:  ${{ secrets.BROWSERSTACK_USERNAME }}
+          access-key: ${{ secrets.BROWSERSTACK_ACCESS_KEY }}
+
+      - name: 'BrowserStack Local Tunnel Setup'  # Invokes the setup-local action
+        uses: browserstack/github-actions/setup-local@master
         with:
-          github-token: ${{ github.token }}
-          script: |
-            const result = await github.rest.checks.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              name: process.env.job_name,
-              head_sha: process.env.commit_sha,
-              status: 'in_progress'
-            }).catch((err) => ({status: err.status, response: err.response}));
-            console.log(`The status-check response : ${result.status} Response : ${JSON.stringify(result.response)}`)
-            if (result.status !== 201) {
-              console.log('Failed to create check run')
-            }
-      - name: Set up Java
-        uses: actions/setup-java@v3
+          local-testing: start
+          local-identifier: random
+
+      # The next 3 steps are for building the web application to be tested and starting the web server on the runner environment
+
+      - name: 'Checkout the repository'
+        uses: actions/checkout@v2
+
+      - name: 'Building web application to be tested'
+        run: npm install
+
+      - name: 'Running application under test'
+        run: ./node_modules/.bin/http-server -p 8099 &
+
+      - name: 'Running test on BrowserStack'  # Invokes the actual test script that would run on BrowserStack browsers
+        run: node index.js  # See sample test script above
+
+      - name: 'BrowserStackLocal Stop'  # Terminating the BrowserStackLocal tunnel connection
+        uses: browserstack/github-actions/setup-local@master
         with:
-          distribution: 'temurin'
-          java-version: ${{ matrix.java }}
-      - name: Run mvn test for testng android
-        run: |
-          cd android/testng-examples
-          mvn compile
-          mvn test
-      - name: Run mvn profile sample-test for testng android
-        run: |
-          cd android/testng-examples
-          mvn compile
-          mvn test -P sample-test
-      - name: Run mvn profile sample-local-test for testng android
-        run: |
-          cd android/testng-examples
-          mvn compile
-          mvn test -P sample-local-test -D"browserstack.app"="./LocalSample.apk"
-      - name: Run Gradle sample-test for testng Android
-        run: |
-          cd android/testng-examples
-          gradle clean sampleTest
-      - name: Run Gradle sampleLocalTest for testng Android
-        run: |
-          cd android/testng-examples
-          gradle clean sampleLocalTest -D"browserstack.app"="./LocalSample.apk"
-      - name: Run mvn test for testng ios
-        run: |
-          cd ios/testng-examples
-          mvn compile
-          mvn test
-      - name: Run mvn profile sample-test for testng ios
-        run: |
-          cd ios/testng-examples
-          mvn compile
-          mvn test -P sample-test
-      - name: Run mvn profile sample-local-test for testng ios
-        run: |
-          cd ios/testng-examples
-          mvn compile
-          mvn test -P sample-local-test -D"browserstack.app"="./LocalSample.ipa"
-      - name: Run Gradle sample-test for testng ios
-        run: |
-          cd ios/testng-examples
-          gradle clean sampleTest
-      - name: Run Gradle sampleLocalTest for testng ios
-        run: |
-          cd ios/testng-examples
-          gradle clean sample-local-test -D"browserstack.app"="./LocalSample.ipa"    
-      - if: always()
-        uses: actions/github-script@98814c53be79b1d30f795b907e553d8679345975
-        id: status-check-completed
-        env:
-          conclusion: ${{ job.status }}
-          job_name: TestNG Appium Repo ${{ matrix.Java }} - ${{ matrix.os }} Sample
-          commit_sha: ${{ github.event.inputs.commit_sha }}
-        with:
-          github-token: ${{ github.token }}
-          script: |
-            const result = await github.rest.checks.create({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            name: process.env.job_name,
-            head_sha: process.env.commit_sha,
-            status: 'completed',
-            conclusion: process.env.conclusion
-            }).catch((err) => ({status: err.status, response: err.response}));
-            console.log(`The status-check response : ${result.status} Response : ${JSON.stringify(result.response)}`)
-            if (result.status !== 201) {
-              console.log('Failed to create check run')
-            }
+          local-testing: stop
